package com.deloitte.training.oodesignpatterns.creational.builder;

public interface Builder<T> {

    public T build();

}
